cplusp.output
Terminals unused in grammar

   TYPE_VOID
   RETURN
   BREAK
   STRING
   INVALID


Grammar

    0 $accept: program $end

    1 program: statement_list
    2        | %empty

    3 statement_list: statement_block statement_list
    4               | statement_block

    5 statement_block: assignment_statement TERMINATOR
    6                | declaration_statement TERMINATOR
    7                | tertiary_statement TERMINATOR
    8                | control_statement
    9                | loops
   10                | expression TERMINATOR

   11 statement: assignment_statement
   12          | control_statement
   13          | expression

   14 data_type: TYPE_INT
   15          | TYPE_FLOAT
   16          | TYPE_CHAR
   17          | TYPE_BOOL
   18          | TYPE_FILE

   19 value: INT
   20      | FLOAT
   21      | CHAR
   22      | BOOL

   23 assignment_statement: VARIABLE ASSIGNMENT expression

   24 declaration_statement: data_type VARIABLE ASSIGNMENT expression
   25                      | data_type VARIABLE

   26 tertiary_statement: '(' expression ')' '?' statement ':' statement

   27 control_statement: IF '(' expression ')' '{' statement_list '}' else_statement

   28 else_statement: ELSE '{' statement_list '}'
   29               | ELIF '(' expression ')' '{' statement_list '}' else_statement
   30               | %empty

   31 loops: WHILE '(' expression ')' '{' statement_list '}'
   32      | FOR assignment_statement ',' expression ',' assignment_statement '{' statement_list '}'

   33 expression: expression LOGOR expression
   34           | expression LOGAND expression
   35           | expression '|' expression
   36           | expression '^' expression
   37           | expression '&' expression
   38           | expression EQ expression
   39           | expression NE expression
   40           | expression GT expression
   41           | expression GE expression
   42           | expression LT expression
   43           | expression LE expression
   44           | expression LSHIFT expression
   45           | expression RSHIFT expression
   46           | expression '+' expression
   47           | expression '-' expression
   48           | expression '*' expression
   49           | expression '/' expression
   50           | expression '%' expression
   51           | '(' expression ')'
   52           | '-' expression
   53           | '!' expression
   54           | '~' expression
   55           | VARIABLE
   56           | value


Terminals, with rules where they appear

$end (0) 0
'!' (33) 53
'%' (37) 50
'&' (38) 37
'(' (40) 26 27 29 31 51
')' (41) 26 27 29 31 51
'*' (42) 48
'+' (43) 46
',' (44) 32
'-' (45) 47 52
'/' (47) 49
':' (58) 26
'?' (63) 26
'^' (94) 36
'{' (123) 27 28 29 31 32
'|' (124) 35
'}' (125) 27 28 29 31 32
'~' (126) 54
error (256)
TYPE_VOID (258)
ASSIGNMENT (259) 23 24
LSHIFT (260) 44
RSHIFT (261) 45
LT (262) 42
GT (263) 40
EQ (264) 38
NE (265) 39
LE (266) 43
GE (267) 41
LOGAND (268) 34
LOGOR (269) 33
TERMINATOR (270) 5 6 7 10
IF (271) 27
ELIF (272) 29
ELSE (273) 28
FOR (274) 32
WHILE (275) 31
RETURN (276)
BREAK (277)
INT (278) 19
FLOAT (279) 20
CHAR (280) 21
BOOL (281) 22
STRING (282)
VARIABLE (283) 23 24 25 55
INVALID (284)
TYPE_INT (285) 14
TYPE_FLOAT (286) 15
TYPE_CHAR (287) 16
TYPE_BOOL (288) 17
TYPE_FILE (289) 18
UMINUS (290)


Nonterminals, with rules where they appear

$accept (53)
    on left: 0
program (54)
    on left: 1 2, on right: 0
statement_list (55)
    on left: 3 4, on right: 1 3 27 28 29 31 32
statement_block (56)
    on left: 5 6 7 8 9 10, on right: 3 4
statement (57)
    on left: 11 12 13, on right: 26
data_type (58)
    on left: 14 15 16 17 18, on right: 24 25
value (59)
    on left: 19 20 21 22, on right: 56
assignment_statement (60)
    on left: 23, on right: 5 11 32
declaration_statement (61)
    on left: 24 25, on right: 6
tertiary_statement (62)
    on left: 26, on right: 7
control_statement (63)
    on left: 27, on right: 8 12
else_statement (64)
    on left: 28 29 30, on right: 27 29
loops (65)
    on left: 31 32, on right: 9
expression (66)
    on left: 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50
    51 52 53 54 55 56, on right: 10 13 23 24 26 27 29 31 32 33 34 35
    36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54


State 0

    0 $accept: . program $end

    IF          shift, and go to state 1
    FOR         shift, and go to state 2
    WHILE       shift, and go to state 3
    INT         shift, and go to state 4
    FLOAT       shift, and go to state 5
    CHAR        shift, and go to state 6
    BOOL        shift, and go to state 7
    VARIABLE    shift, and go to state 8
    TYPE_INT    shift, and go to state 9
    TYPE_FLOAT  shift, and go to state 10
    TYPE_CHAR   shift, and go to state 11
    TYPE_BOOL   shift, and go to state 12
    TYPE_FILE   shift, and go to state 13
    '-'         shift, and go to state 14
    '!'         shift, and go to state 15
    '~'         shift, and go to state 16
    '('         shift, and go to state 17

    $default  reduce using rule 2 (program)

    program                go to state 18
    statement_list         go to state 19
    statement_block        go to state 20
    data_type              go to state 21
    value                  go to state 22
    assignment_statement   go to state 23
    declaration_statement  go to state 24
    tertiary_statement     go to state 25
    control_statement      go to state 26
    loops                  go to state 27
    expression             go to state 28


State 1

   27 control_statement: IF . '(' expression ')' '{' statement_list '}' else_statement

    '('  shift, and go to state 29


State 2

   32 loops: FOR . assignment_statement ',' expression ',' assignment_statement '{' statement_list '}'

    VARIABLE  shift, and go to state 30

    assignment_statement  go to state 31


State 3

   31 loops: WHILE . '(' expression ')' '{' statement_list '}'

    '('  shift, and go to state 32


State 4

   19 value: INT .

    $default  reduce using rule 19 (value)


State 5

   20 value: FLOAT .

    $default  reduce using rule 20 (value)


State 6

   21 value: CHAR .

    $default  reduce using rule 21 (value)


State 7

   22 value: BOOL .

    $default  reduce using rule 22 (value)


State 8

   23 assignment_statement: VARIABLE . ASSIGNMENT expression
   55 expression: VARIABLE .

    ASSIGNMENT  shift, and go to state 33

    $default  reduce using rule 55 (expression)


State 9

   14 data_type: TYPE_INT .

    $default  reduce using rule 14 (data_type)


State 10

   15 data_type: TYPE_FLOAT .

    $default  reduce using rule 15 (data_type)


State 11

   16 data_type: TYPE_CHAR .

    $default  reduce using rule 16 (data_type)


State 12

   17 data_type: TYPE_BOOL .

    $default  reduce using rule 17 (data_type)


State 13

   18 data_type: TYPE_FILE .

    $default  reduce using rule 18 (data_type)


State 14

   52 expression: '-' . expression

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    CHAR      shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 34
    '-'       shift, and go to state 14
    '!'       shift, and go to state 15
    '~'       shift, and go to state 16
    '('       shift, and go to state 35

    value       go to state 22
    expression  go to state 36


State 15

   53 expression: '!' . expression

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    CHAR      shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 34
    '-'       shift, and go to state 14
    '!'       shift, and go to state 15
    '~'       shift, and go to state 16
    '('       shift, and go to state 35

    value       go to state 22
    expression  go to state 37


State 16

   54 expression: '~' . expression

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    CHAR      shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 34
    '-'       shift, and go to state 14
    '!'       shift, and go to state 15
    '~'       shift, and go to state 16
    '('       shift, and go to state 35

    value       go to state 22
    expression  go to state 38


State 17

   26 tertiary_statement: '(' . expression ')' '?' statement ':' statement
   51 expression: '(' . expression ')'

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    CHAR      shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 34
    '-'       shift, and go to state 14
    '!'       shift, and go to state 15
    '~'       shift, and go to state 16
    '('       shift, and go to state 35

    value       go to state 22
    expression  go to state 39


State 18

    0 $accept: program . $end

    $end  shift, and go to state 40


State 19

    1 program: statement_list .

    $default  reduce using rule 1 (program)


State 20

    3 statement_list: statement_block . statement_list
    4               | statement_block .

    IF          shift, and go to state 1
    FOR         shift, and go to state 2
    WHILE       shift, and go to state 3
    INT         shift, and go to state 4
    FLOAT       shift, and go to state 5
    CHAR        shift, and go to state 6
    BOOL        shift, and go to state 7
    VARIABLE    shift, and go to state 8
    TYPE_INT    shift, and go to state 9
    TYPE_FLOAT  shift, and go to state 10
    TYPE_CHAR   shift, and go to state 11
    TYPE_BOOL   shift, and go to state 12
    TYPE_FILE   shift, and go to state 13
    '-'         shift, and go to state 14
    '!'         shift, and go to state 15
    '~'         shift, and go to state 16
    '('         shift, and go to state 17

    $default  reduce using rule 4 (statement_list)

    statement_list         go to state 41
    statement_block        go to state 20
    data_type              go to state 21
    value                  go to state 22
    assignment_statement   go to state 23
    declaration_statement  go to state 24
    tertiary_statement     go to state 25
    control_statement      go to state 26
    loops                  go to state 27
    expression             go to state 28


State 21

   24 declaration_statement: data_type . VARIABLE ASSIGNMENT expression
   25                      | data_type . VARIABLE

    VARIABLE  shift, and go to state 42


State 22

   56 expression: value .

    $default  reduce using rule 56 (expression)


State 23

    5 statement_block: assignment_statement . TERMINATOR

    TERMINATOR  shift, and go to state 43


State 24

    6 statement_block: declaration_statement . TERMINATOR

    TERMINATOR  shift, and go to state 44


State 25

    7 statement_block: tertiary_statement . TERMINATOR

    TERMINATOR  shift, and go to state 45


State 26

    8 statement_block: control_statement .

    $default  reduce using rule 8 (statement_block)


State 27

    9 statement_block: loops .

    $default  reduce using rule 9 (statement_block)


State 28

   10 statement_block: expression . TERMINATOR
   33 expression: expression . LOGOR expression
   34           | expression . LOGAND expression
   35           | expression . '|' expression
   36           | expression . '^' expression
   37           | expression . '&' expression
   38           | expression . EQ expression
   39           | expression . NE expression
   40           | expression . GT expression
   41           | expression . GE expression
   42           | expression . LT expression
   43           | expression . LE expression
   44           | expression . LSHIFT expression
   45           | expression . RSHIFT expression
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression
   50           | expression . '%' expression

    LSHIFT      shift, and go to state 46
    RSHIFT      shift, and go to state 47
    LT          shift, and go to state 48
    GT          shift, and go to state 49
    EQ          shift, and go to state 50
    NE          shift, and go to state 51
    LE          shift, and go to state 52
    GE          shift, and go to state 53
    LOGAND      shift, and go to state 54
    LOGOR       shift, and go to state 55
    TERMINATOR  shift, and go to state 56
    '|'         shift, and go to state 57
    '^'         shift, and go to state 58
    '&'         shift, and go to state 59
    '+'         shift, and go to state 60
    '-'         shift, and go to state 61
    '*'         shift, and go to state 62
    '/'         shift, and go to state 63
    '%'         shift, and go to state 64


State 29

   27 control_statement: IF '(' . expression ')' '{' statement_list '}' else_statement

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    CHAR      shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 34
    '-'       shift, and go to state 14
    '!'       shift, and go to state 15
    '~'       shift, and go to state 16
    '('       shift, and go to state 35

    value       go to state 22
    expression  go to state 65


State 30

   23 assignment_statement: VARIABLE . ASSIGNMENT expression

    ASSIGNMENT  shift, and go to state 33


State 31

   32 loops: FOR assignment_statement . ',' expression ',' assignment_statement '{' statement_list '}'

    ','  shift, and go to state 66


State 32

   31 loops: WHILE '(' . expression ')' '{' statement_list '}'

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    CHAR      shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 34
    '-'       shift, and go to state 14
    '!'       shift, and go to state 15
    '~'       shift, and go to state 16
    '('       shift, and go to state 35

    value       go to state 22
    expression  go to state 67


State 33

   23 assignment_statement: VARIABLE ASSIGNMENT . expression

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    CHAR      shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 34
    '-'       shift, and go to state 14
    '!'       shift, and go to state 15
    '~'       shift, and go to state 16
    '('       shift, and go to state 35

    value       go to state 22
    expression  go to state 68


State 34

   55 expression: VARIABLE .

    $default  reduce using rule 55 (expression)


State 35

   51 expression: '(' . expression ')'

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    CHAR      shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 34
    '-'       shift, and go to state 14
    '!'       shift, and go to state 15
    '~'       shift, and go to state 16
    '('       shift, and go to state 35

    value       go to state 22
    expression  go to state 69


State 36

   33 expression: expression . LOGOR expression
   34           | expression . LOGAND expression
   35           | expression . '|' expression
   36           | expression . '^' expression
   37           | expression . '&' expression
   38           | expression . EQ expression
   39           | expression . NE expression
   40           | expression . GT expression
   41           | expression . GE expression
   42           | expression . LT expression
   43           | expression . LE expression
   44           | expression . LSHIFT expression
   45           | expression . RSHIFT expression
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression
   50           | expression . '%' expression
   52           | '-' expression .

    $default  reduce using rule 52 (expression)


State 37

   33 expression: expression . LOGOR expression
   34           | expression . LOGAND expression
   35           | expression . '|' expression
   36           | expression . '^' expression
   37           | expression . '&' expression
   38           | expression . EQ expression
   39           | expression . NE expression
   40           | expression . GT expression
   41           | expression . GE expression
   42           | expression . LT expression
   43           | expression . LE expression
   44           | expression . LSHIFT expression
   45           | expression . RSHIFT expression
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression
   50           | expression . '%' expression
   53           | '!' expression .

    $default  reduce using rule 53 (expression)


State 38

   33 expression: expression . LOGOR expression
   34           | expression . LOGAND expression
   35           | expression . '|' expression
   36           | expression . '^' expression
   37           | expression . '&' expression
   38           | expression . EQ expression
   39           | expression . NE expression
   40           | expression . GT expression
   41           | expression . GE expression
   42           | expression . LT expression
   43           | expression . LE expression
   44           | expression . LSHIFT expression
   45           | expression . RSHIFT expression
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression
   50           | expression . '%' expression
   54           | '~' expression .

    $default  reduce using rule 54 (expression)


State 39

   26 tertiary_statement: '(' expression . ')' '?' statement ':' statement
   33 expression: expression . LOGOR expression
   34           | expression . LOGAND expression
   35           | expression . '|' expression
   36           | expression . '^' expression
   37           | expression . '&' expression
   38           | expression . EQ expression
   39           | expression . NE expression
   40           | expression . GT expression
   41           | expression . GE expression
   42           | expression . LT expression
   43           | expression . LE expression
   44           | expression . LSHIFT expression
   45           | expression . RSHIFT expression
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression
   50           | expression . '%' expression
   51           | '(' expression . ')'

    LSHIFT  shift, and go to state 46
    RSHIFT  shift, and go to state 47
    LT      shift, and go to state 48
    GT      shift, and go to state 49
    EQ      shift, and go to state 50
    NE      shift, and go to state 51
    LE      shift, and go to state 52
    GE      shift, and go to state 53
    LOGAND  shift, and go to state 54
    LOGOR   shift, and go to state 55
    '|'     shift, and go to state 57
    '^'     shift, and go to state 58
    '&'     shift, and go to state 59
    '+'     shift, and go to state 60
    '-'     shift, and go to state 61
    '*'     shift, and go to state 62
    '/'     shift, and go to state 63
    '%'     shift, and go to state 64
    ')'     shift, and go to state 70


State 40

    0 $accept: program $end .

    $default  accept


State 41

    3 statement_list: statement_block statement_list .

    $default  reduce using rule 3 (statement_list)


State 42

   24 declaration_statement: data_type VARIABLE . ASSIGNMENT expression
   25                      | data_type VARIABLE .

    ASSIGNMENT  shift, and go to state 71

    $default  reduce using rule 25 (declaration_statement)


State 43

    5 statement_block: assignment_statement TERMINATOR .

    $default  reduce using rule 5 (statement_block)


State 44

    6 statement_block: declaration_statement TERMINATOR .

    $default  reduce using rule 6 (statement_block)


State 45

    7 statement_block: tertiary_statement TERMINATOR .

    $default  reduce using rule 7 (statement_block)


State 46

   44 expression: expression LSHIFT . expression

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    CHAR      shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 34
    '-'       shift, and go to state 14
    '!'       shift, and go to state 15
    '~'       shift, and go to state 16
    '('       shift, and go to state 35

    value       go to state 22
    expression  go to state 72


State 47

   45 expression: expression RSHIFT . expression

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    CHAR      shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 34
    '-'       shift, and go to state 14
    '!'       shift, and go to state 15
    '~'       shift, and go to state 16
    '('       shift, and go to state 35

    value       go to state 22
    expression  go to state 73


State 48

   42 expression: expression LT . expression

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    CHAR      shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 34
    '-'       shift, and go to state 14
    '!'       shift, and go to state 15
    '~'       shift, and go to state 16
    '('       shift, and go to state 35

    value       go to state 22
    expression  go to state 74


State 49

   40 expression: expression GT . expression

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    CHAR      shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 34
    '-'       shift, and go to state 14
    '!'       shift, and go to state 15
    '~'       shift, and go to state 16
    '('       shift, and go to state 35

    value       go to state 22
    expression  go to state 75


State 50

   38 expression: expression EQ . expression

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    CHAR      shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 34
    '-'       shift, and go to state 14
    '!'       shift, and go to state 15
    '~'       shift, and go to state 16
    '('       shift, and go to state 35

    value       go to state 22
    expression  go to state 76


State 51

   39 expression: expression NE . expression

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    CHAR      shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 34
    '-'       shift, and go to state 14
    '!'       shift, and go to state 15
    '~'       shift, and go to state 16
    '('       shift, and go to state 35

    value       go to state 22
    expression  go to state 77


State 52

   43 expression: expression LE . expression

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    CHAR      shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 34
    '-'       shift, and go to state 14
    '!'       shift, and go to state 15
    '~'       shift, and go to state 16
    '('       shift, and go to state 35

    value       go to state 22
    expression  go to state 78


State 53

   41 expression: expression GE . expression

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    CHAR      shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 34
    '-'       shift, and go to state 14
    '!'       shift, and go to state 15
    '~'       shift, and go to state 16
    '('       shift, and go to state 35

    value       go to state 22
    expression  go to state 79


State 54

   34 expression: expression LOGAND . expression

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    CHAR      shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 34
    '-'       shift, and go to state 14
    '!'       shift, and go to state 15
    '~'       shift, and go to state 16
    '('       shift, and go to state 35

    value       go to state 22
    expression  go to state 80


State 55

   33 expression: expression LOGOR . expression

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    CHAR      shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 34
    '-'       shift, and go to state 14
    '!'       shift, and go to state 15
    '~'       shift, and go to state 16
    '('       shift, and go to state 35

    value       go to state 22
    expression  go to state 81


State 56

   10 statement_block: expression TERMINATOR .

    $default  reduce using rule 10 (statement_block)


State 57

   35 expression: expression '|' . expression

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    CHAR      shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 34
    '-'       shift, and go to state 14
    '!'       shift, and go to state 15
    '~'       shift, and go to state 16
    '('       shift, and go to state 35

    value       go to state 22
    expression  go to state 82


State 58

   36 expression: expression '^' . expression

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    CHAR      shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 34
    '-'       shift, and go to state 14
    '!'       shift, and go to state 15
    '~'       shift, and go to state 16
    '('       shift, and go to state 35

    value       go to state 22
    expression  go to state 83


State 59

   37 expression: expression '&' . expression

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    CHAR      shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 34
    '-'       shift, and go to state 14
    '!'       shift, and go to state 15
    '~'       shift, and go to state 16
    '('       shift, and go to state 35

    value       go to state 22
    expression  go to state 84


State 60

   46 expression: expression '+' . expression

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    CHAR      shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 34
    '-'       shift, and go to state 14
    '!'       shift, and go to state 15
    '~'       shift, and go to state 16
    '('       shift, and go to state 35

    value       go to state 22
    expression  go to state 85


State 61

   47 expression: expression '-' . expression

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    CHAR      shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 34
    '-'       shift, and go to state 14
    '!'       shift, and go to state 15
    '~'       shift, and go to state 16
    '('       shift, and go to state 35

    value       go to state 22
    expression  go to state 86


State 62

   48 expression: expression '*' . expression

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    CHAR      shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 34
    '-'       shift, and go to state 14
    '!'       shift, and go to state 15
    '~'       shift, and go to state 16
    '('       shift, and go to state 35

    value       go to state 22
    expression  go to state 87


State 63

   49 expression: expression '/' . expression

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    CHAR      shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 34
    '-'       shift, and go to state 14
    '!'       shift, and go to state 15
    '~'       shift, and go to state 16
    '('       shift, and go to state 35

    value       go to state 22
    expression  go to state 88


State 64

   50 expression: expression '%' . expression

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    CHAR      shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 34
    '-'       shift, and go to state 14
    '!'       shift, and go to state 15
    '~'       shift, and go to state 16
    '('       shift, and go to state 35

    value       go to state 22
    expression  go to state 89


State 65

   27 control_statement: IF '(' expression . ')' '{' statement_list '}' else_statement
   33 expression: expression . LOGOR expression
   34           | expression . LOGAND expression
   35           | expression . '|' expression
   36           | expression . '^' expression
   37           | expression . '&' expression
   38           | expression . EQ expression
   39           | expression . NE expression
   40           | expression . GT expression
   41           | expression . GE expression
   42           | expression . LT expression
   43           | expression . LE expression
   44           | expression . LSHIFT expression
   45           | expression . RSHIFT expression
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression
   50           | expression . '%' expression

    LSHIFT  shift, and go to state 46
    RSHIFT  shift, and go to state 47
    LT      shift, and go to state 48
    GT      shift, and go to state 49
    EQ      shift, and go to state 50
    NE      shift, and go to state 51
    LE      shift, and go to state 52
    GE      shift, and go to state 53
    LOGAND  shift, and go to state 54
    LOGOR   shift, and go to state 55
    '|'     shift, and go to state 57
    '^'     shift, and go to state 58
    '&'     shift, and go to state 59
    '+'     shift, and go to state 60
    '-'     shift, and go to state 61
    '*'     shift, and go to state 62
    '/'     shift, and go to state 63
    '%'     shift, and go to state 64
    ')'     shift, and go to state 90


State 66

   32 loops: FOR assignment_statement ',' . expression ',' assignment_statement '{' statement_list '}'

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    CHAR      shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 34
    '-'       shift, and go to state 14
    '!'       shift, and go to state 15
    '~'       shift, and go to state 16
    '('       shift, and go to state 35

    value       go to state 22
    expression  go to state 91


State 67

   31 loops: WHILE '(' expression . ')' '{' statement_list '}'
   33 expression: expression . LOGOR expression
   34           | expression . LOGAND expression
   35           | expression . '|' expression
   36           | expression . '^' expression
   37           | expression . '&' expression
   38           | expression . EQ expression
   39           | expression . NE expression
   40           | expression . GT expression
   41           | expression . GE expression
   42           | expression . LT expression
   43           | expression . LE expression
   44           | expression . LSHIFT expression
   45           | expression . RSHIFT expression
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression
   50           | expression . '%' expression

    LSHIFT  shift, and go to state 46
    RSHIFT  shift, and go to state 47
    LT      shift, and go to state 48
    GT      shift, and go to state 49
    EQ      shift, and go to state 50
    NE      shift, and go to state 51
    LE      shift, and go to state 52
    GE      shift, and go to state 53
    LOGAND  shift, and go to state 54
    LOGOR   shift, and go to state 55
    '|'     shift, and go to state 57
    '^'     shift, and go to state 58
    '&'     shift, and go to state 59
    '+'     shift, and go to state 60
    '-'     shift, and go to state 61
    '*'     shift, and go to state 62
    '/'     shift, and go to state 63
    '%'     shift, and go to state 64
    ')'     shift, and go to state 92


State 68

   23 assignment_statement: VARIABLE ASSIGNMENT expression .
   33 expression: expression . LOGOR expression
   34           | expression . LOGAND expression
   35           | expression . '|' expression
   36           | expression . '^' expression
   37           | expression . '&' expression
   38           | expression . EQ expression
   39           | expression . NE expression
   40           | expression . GT expression
   41           | expression . GE expression
   42           | expression . LT expression
   43           | expression . LE expression
   44           | expression . LSHIFT expression
   45           | expression . RSHIFT expression
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression
   50           | expression . '%' expression

    LSHIFT  shift, and go to state 46
    RSHIFT  shift, and go to state 47
    LT      shift, and go to state 48
    GT      shift, and go to state 49
    EQ      shift, and go to state 50
    NE      shift, and go to state 51
    LE      shift, and go to state 52
    GE      shift, and go to state 53
    LOGAND  shift, and go to state 54
    LOGOR   shift, and go to state 55
    '|'     shift, and go to state 57
    '^'     shift, and go to state 58
    '&'     shift, and go to state 59
    '+'     shift, and go to state 60
    '-'     shift, and go to state 61
    '*'     shift, and go to state 62
    '/'     shift, and go to state 63
    '%'     shift, and go to state 64

    $default  reduce using rule 23 (assignment_statement)


State 69

   33 expression: expression . LOGOR expression
   34           | expression . LOGAND expression
   35           | expression . '|' expression
   36           | expression . '^' expression
   37           | expression . '&' expression
   38           | expression . EQ expression
   39           | expression . NE expression
   40           | expression . GT expression
   41           | expression . GE expression
   42           | expression . LT expression
   43           | expression . LE expression
   44           | expression . LSHIFT expression
   45           | expression . RSHIFT expression
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression
   50           | expression . '%' expression
   51           | '(' expression . ')'

    LSHIFT  shift, and go to state 46
    RSHIFT  shift, and go to state 47
    LT      shift, and go to state 48
    GT      shift, and go to state 49
    EQ      shift, and go to state 50
    NE      shift, and go to state 51
    LE      shift, and go to state 52
    GE      shift, and go to state 53
    LOGAND  shift, and go to state 54
    LOGOR   shift, and go to state 55
    '|'     shift, and go to state 57
    '^'     shift, and go to state 58
    '&'     shift, and go to state 59
    '+'     shift, and go to state 60
    '-'     shift, and go to state 61
    '*'     shift, and go to state 62
    '/'     shift, and go to state 63
    '%'     shift, and go to state 64
    ')'     shift, and go to state 93


State 70

   26 tertiary_statement: '(' expression ')' . '?' statement ':' statement
   51 expression: '(' expression ')' .

    '?'  shift, and go to state 94

    $default  reduce using rule 51 (expression)


State 71

   24 declaration_statement: data_type VARIABLE ASSIGNMENT . expression

    INT       shift, and go to state 4
    FLOAT     shift, and go to state 5
    CHAR      shift, and go to state 6
    BOOL      shift, and go to state 7
    VARIABLE  shift, and go to state 34
    '-'       shift, and go to state 14
    '!'       shift, and go to state 15
    '~'       shift, and go to state 16
    '('       shift, and go to state 35

    value       go to state 22
    expression  go to state 95


State 72

   33 expression: expression . LOGOR expression
   34           | expression . LOGAND expression
   35           | expression . '|' expression
   36           | expression . '^' expression
   37           | expression . '&' expression
   38           | expression . EQ expression
   39           | expression . NE expression
   40           | expression . GT expression
   41           | expression . GE expression
   42           | expression . LT expression
   43           | expression . LE expression
   44           | expression . LSHIFT expression
   44           | expression LSHIFT expression .
   45           | expression . RSHIFT expression
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression
   50           | expression . '%' expression

    '+'  shift, and go to state 60
    '-'  shift, and go to state 61
    '*'  shift, and go to state 62
    '/'  shift, and go to state 63
    '%'  shift, and go to state 64

    $default  reduce using rule 44 (expression)


State 73

   33 expression: expression . LOGOR expression
   34           | expression . LOGAND expression
   35           | expression . '|' expression
   36           | expression . '^' expression
   37           | expression . '&' expression
   38           | expression . EQ expression
   39           | expression . NE expression
   40           | expression . GT expression
   41           | expression . GE expression
   42           | expression . LT expression
   43           | expression . LE expression
   44           | expression . LSHIFT expression
   45           | expression . RSHIFT expression
   45           | expression RSHIFT expression .
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression
   50           | expression . '%' expression

    '+'  shift, and go to state 60
    '-'  shift, and go to state 61
    '*'  shift, and go to state 62
    '/'  shift, and go to state 63
    '%'  shift, and go to state 64

    $default  reduce using rule 45 (expression)


State 74

   33 expression: expression . LOGOR expression
   34           | expression . LOGAND expression
   35           | expression . '|' expression
   36           | expression . '^' expression
   37           | expression . '&' expression
   38           | expression . EQ expression
   39           | expression . NE expression
   40           | expression . GT expression
   41           | expression . GE expression
   42           | expression . LT expression
   42           | expression LT expression .
   43           | expression . LE expression
   44           | expression . LSHIFT expression
   45           | expression . RSHIFT expression
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression
   50           | expression . '%' expression

    LSHIFT  shift, and go to state 46
    RSHIFT  shift, and go to state 47
    '+'     shift, and go to state 60
    '-'     shift, and go to state 61
    '*'     shift, and go to state 62
    '/'     shift, and go to state 63
    '%'     shift, and go to state 64

    $default  reduce using rule 42 (expression)


State 75
